[package]
name = "num-ord"
version = "0.1.0"
edition = "2018"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Numerically ordered wrapper type for cross-type comparisons"
license = "Zlib"
repository = "https://github.com/orlp/num-ord"
readme = "README.md"
keywords = ["compare", "comparison", "number", "numeric", "type"]
categories = ["algorithm", "no-std", "mathematics"]

[dependencies]